--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,5 +53,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
-          path: ./build # Replace with the actual path to your build output
+          path: ./dist # Replace with the actual path to your build output
         
