--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,18 +38,7 @@ jobs:
         run: npm ci
       - name: Build React app
         run: npm run build
-
-
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
+      - name: Upload GitHub Pages artifact
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
